crates/ir/tests/ir/snapshots/main__ir__lower__modules__overload_local_call_resolve.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module modules__overload_local_call_resolve

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[i4]) -> Option[i4]
import core/list/sort_by as sort_by(List[n6], (n6) -> c6) -> List[n6]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[a12]) -> List[a12]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
fn stringify(v0: Int) -> String =
  "int"

fn stringify(v1: Bool) -> String =
  "bool"

fn test_int() -> String =
  let v2: String = call stringify(42)
  v2

fn test_bool() -> String =
  let v3: String = call stringify(true)
  v3
