crates/ir/tests/ir/snapshots/main__ir__lower__modules__overload_second_param_resolve.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module modules__overload_second_param_resolve

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[i4]) -> Option[i4]
import core/list/sort_by as sort_by(List[n6], (n6) -> c6) -> List[n6]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[a12]) -> List[a12]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import overload_second_param_lib/format as format(Int, String) -> String
import overload_second_param_lib2/format as format(Int, Int) -> String
declare format: (Int, Int) -> String
declare format: (Int, String) -> String

fn test_locale() -> String =
  let v0: String = call format(42, "en")
  v0

fn test_precision() -> String =
  let v1: String = call format(42, 3)
  v1
