crates/ir/tests/ir/snapshots/main__ir__lower__modules__overload_value_hof.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module modules__overload_value_hof

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[f3]) -> Option[f3]
import core/list/sort_by as sort_by(List[k5], (k5) -> z4) -> List[k5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], u1, (u1, t1) -> u1) -> u1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[q10]) -> List[q10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import vec_mod/length as length(Vec[Int]) -> Int
import list_mod/length as length(List[Int]) -> Int
declare length: (Vec[Int]) -> Int

fn apply(v0: (Vec[Int]) -> Int, v1: Vec[Int]) -> Int =
  let v2: Int = call_closure v0(v1)
  v2

fn test(v3: Vec[Int]) -> Int =
  let v4: (Vec[Int]) -> Int = make_closure(length, [])
  let v5: (Vec[Int]) -> Int = v4
  let v6: Int = call apply(v5, v3)
  v6
