crates/ir/tests/ir/snapshots/main__ir__lower__modules__overload_value_lambda_consistency.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module modules__overload_value_lambda_consistency

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import vec_mod/length as length(Vec[Int]) -> Int
import list_mod/length as length(List[Int]) -> Int
declare length: (Vec[Int]) -> Int

fn apply(v0: (Vec[Int]) -> Int, v1: Vec[Int]) -> Int =
  let v2: Int = call_closure v0(v1)
  v2

fn test_value(v3: Vec[Int]) -> Int =
  let v4: (Vec[Int]) -> Int = make_closure(length, [])
  let v5: (Vec[Int]) -> Int = v4
  let v6: Int = call apply(v5, v3)
  v6

fn test_lambda(v7: Vec[Int]) -> Int =
  let v10: (Vec[Int]) -> Int = make_closure(lambda$35, [])
  let v11: Int = call apply(v10, v7)
  v11

fn lambda$35(v8: Vec[Int]) -> Int =
  let v9: Int = call length(v8)
  v9
