crates/ir/tests/ir/snapshots/main__ir__lower__modules__prelude_auto.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module modules__prelude_auto

import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
declare println: (g) -> Unit

fn test_option() -> Option[Int] =
  let v0: Option[Int] = construct Option::Some#0(42)
  v0

fn test_list() -> List[Int] =
  let v1: List[Int] = construct List::Nil#1()
  let v2: List[Int] = construct List::Cons#0(2, v1)
  let v3: List[Int] = construct List::Cons#0(1, v2)
  v3

fn test_result() -> Result[String, Int] =
  let v4: Result[String, Int] = construct Result::Ok#0(42)
  v4

fn test_ordering() -> Ordering =
  let v5: Ordering = construct Ordering::LT#0()
  v5

fn main() -> Unit =
  let v8: Option[Int] = call test_option()
  let v6: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v7: Dict[core/show.Show, Option[Int]] = make_dict core/show.Show[Option[Int]](v6)
  let v9: Unit = call println(v7, v8)
  v9
